--- a/src/components/about.module.css
+++ b/src/components/about.module.css
@@ -1,9 +1,174 @@
 .about-section{
+    box-shadow: none;
+    padding:0rem 4rem;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    justify-content: center;
+    margin: 10rem auto 0 auto;
+}
+
+.about-section-title {
+   display: flex;
+   flex-direction: column;
+   align-items: center;
+   justify-content: center;
+   font-size: 1.4rem;
+}
+
+.about-section-title h1 {
+   margin: 2.9rem 0;
+   text-align: center;
+   /* width: 28rem; */
+}
+
+.about-section-title h1 span {
+    color: #056050 ;
+ }
+
+.about-section-title button{
+    display: block;
+    color: white;
+    background-color: #056050 ;
+    font-size: 1.8rem;
+    border: none;
+    padding: 1rem 1.5rem;
+    border-radius: 2.5rem;
+    
+}
+
+.about-section-main {
+   width: 100%;
+   display: flex;
+   align-items: center;
+   flex-direction: column;
+   justify-content: space-between;
+   margin-top: 4rem;
+   position: relative;
+}
+
+.about-section-main-article{
+    margin: 1rem auto;
+    max-width: 60rem;
+    text-align: center;
+}
+
+.about-section-main-article h3{
+    font-size: 2rem;
+    color: #056050 ;
+}
+
+.about-section-main-article p {
+    /* display: none; */
+    font-size: 1.6rem;
+    margin: 1rem 0;
+}
+
+.about-section-img{
+    margin:  1.2rem 0rem;
+    max-width: 400px;
+    width: 100%;
+    margin: 0 auto;
+}
+
+.about-section-img img{
+    width: 100%;
+}
+
+.ellipse-empty{
+  display: none;
+}
+
+.about-section-main-article button{
+    color: white;
+    background-color: #056050 ;
+    font-size: 1.8rem;
+    border: none;
+    padding: 1rem 1.5rem;
+    border-radius: 2.5rem;
+}
+
+@media (min-width: 1000px) {
+    
+    .about-section-title {
+        text-align: center;
+        font-size: 2rem;
+    } 
+    
+    
+    .about-section-main {
+        max-width: 140rem;
+        /* display: flex;
+        align-items: center; */
+        flex-direction: row-reverse;
+        justify-content: space-between;
+        margin-top: 4rem;
+        position: relative;
+    }
+    
+    .about-section-main-article{
+        text-align: left;
+       max-width: 49rem;
+    }
+    
+    .about-section-main-article h3{
+        margin-bottom: 1.1rem;
+        font-size: 3.3rem;
+    }
+    
+    .about-section-main-article p {
+        margin-bottom: 2.7rem;
+        font-size: 2.5rem;
+        color: #000000;
+        font-weight: 500;
+    }
+    
+    .about-section-main-article button{
+        color: white;
+        background-color: #056050 ;
+        font-size: 1.8rem;
+        border: none;
+        padding: 1rem 1.5rem;
+        border-radius: 2.5rem;
+    }
+    
+    .about-section-img{
+        width: 35%;
+    }
+    
+    .ellipse-empty{
+        position: absolute;
+        width: 38%;
+        /* right: 300px; */
+        left: 50rem ;
+        top: -3rem;
+        max-width: 500px;
+    }
+    
+    .about-section-img img{
+        width: 100%;
+    }
+
+    .ellipse-empty{
+        display: block;
+      }
+}
+
+
+
+
+
+
+
+
+
+
+/* .about-section{
     padding:1rem 9rem;
     position: relative;
     top: 10.5rem;
-    /* box-shadow: 1px 0px 3px rgba(0, 0, 0, 0.205); */
-    /* background-color: red; */
+    box-shadow: 1px 0px 3px rgba(0, 0, 0, 0.205);
+    background-color: red;
     max-width: 1400px;
     min-width: 800px;
     margin: 0 auto;
@@ -110,6 +275,7 @@
     .about-section-main {
         flex-direction: column-reverse;
         text-align: center;
+        justify-content: center;
         width: 80%;
     }
 
@@ -124,6 +290,7 @@
 
     .about-section-img{
         margin:  1.2rem 0rem;
+        max-width: 400px;
         width: 100%;
     }
 
@@ -138,4 +305,4 @@
     .about-section-main-article button{
       display: none;
     }
-}
+} */
