--- a/src/components/browseMore.module.css
+++ b/src/components/browseMore.module.css
@@ -1,68 +1,125 @@
+.section {
+    background-color: #f1fdfb;
+    padding: 3rem 4rem;
+    position: relative;
+    top: 10.5rem;
+    box-shadow: 1px 2px 3px rgba(0, 0, 0, 0.205);
+}
+
 .browse-more-section {
-  padding: 3rem 9rem;
-  position: relative;
-  top: 10.5rem;
-  /* box-shadow: 1px 2px 3px rgba(0, 0, 0, 0.205); */
-  background-color: #f1fdfb;
-  max-width: 1400px;
-  margin: 0 auto;
-}
-.browse-more-mobile{
-    display: none;
-}
-
-.browse-more-desktop {
-    
-}
-
-.swiper {
-  width: 400px;
-  margin: 0 auto;
-}
-.swiper-slide {
-  height: 200px;
-  background: #882525;
-  line-height: 300px;
-  text-align: center;
-}
-
-.browse-more-section-card {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-}
-
-.browse-more-section-card h5 {
-  font-size: 1.8rem;
-  color: black;
-}
-
-@media (max-width: 1000px) {
-  .browse-more-desktop {
-    display: none;
+    margin: 0 auto;
+    max-width: 140rem;
   }
-
   .browse-more-mobile{
-    
+      display: none;
   }
-}
 
-/* .swiper-slide:nth-child(2) {
-    background: #8acc7d;
+  .swiper {
+    margin: 0 auto;
   }
-  .swiper-slide:nth-child(3) {
-    background: #b7cc7d;
+
+  .swiper-slide {
+    height: 200px;
+    background: #882525;
+    line-height: 300px;
+    text-align: center;
   }
-  .swiper-slide:nth-child(4) {
-    background: #9eb75c;
+  
+  .browse-more-section-card {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
   }
-  .swiper-slide:nth-child(5) {
-    background: #7da8cc;
+  
+  .browse-more-section-card h5 {
+    font-size: 1.8rem;
+    color: black;
   }
-  .swiper-slide:nth-child(6) {
-    background: #96cc7d;
+
+  @media (min-width: 1000px) {
+    .browse-more-section {
+        padding: 0rem 9rem;
+    }
   }
-  .swiper-slide:nth-child(7) {
-    background: #cc7dae;
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+/* .browse-more-section {
+    padding: 3rem 9rem;
+    position: relative;
+    top: 10.5rem;
+    box-shadow: 1px 2px 3px rgba(0, 0, 0, 0.205);
+    background-color: #f1fdfb;
+    max-width: 1400px;
+    margin: 0 auto;
+  }
+  .browse-more-mobile{
+      display: none;
+  }
+  
+  .browse-more-desktop {
+      
+  }
+  
+  .swiper {
+    width: 400px;
+    margin: 0 auto;
+  }
+  .swiper-slide {
+    height: 200px;
+    background: #882525;
+    line-height: 300px;
+    text-align: center;
+  }
+  
+  .browse-more-section-card {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+  }
+  
+  .browse-more-section-card h5 {
+    font-size: 1.8rem;
+    color: black;
+  }
+  
+  @media (max-width: 1000px) {
+    .browse-more-desktop {
+      display: none;
+    }
+  
+    .browse-more-mobile{
+      
+    }
   } */
