--- a/src/components/feature.module.css
+++ b/src/components/feature.module.css
@@ -1,18 +1,62 @@
-.footer-section{
+.feature-section{
     padding: 3rem 4rem;
     position: relative;
     top: 10.5rem;
-    background-color: #056050;
-    color: white;
+}
+.feature-section-cards{
+    display: flex;
+    align-items: center;
+    gap: 1rem;
+    margin: 2rem 0rem;
+    justify-content: center;
+    flex-wrap: wrap;
+}
+.feature-section-card{
+    width: 40%;
+    padding: 2rem;
+    border-radius: 3rem;
+    /* box-shadow: 1px 2px 3px rgba(0, 0, 0, 0.205); */
+    border: 1px solid #cdefe9 ;
+
+}
+.card-img{
+
 }
 
-.footer-lists {
-     display: flex;
-     align-items: center;
-     justify-content: center;
-     flex-direction: column;
+.card-article{
+
 }
 
-.footer-list{
+@media(min-width:400){
+    .feature-section-card{
+        height: 34rem;
+    }
+}
+
+@media(min-width:400){
+    .feature-section-card{
+        height: 30rem;
+    }
+}
+
+
+@media (min-width:500px)  {
+    .feature-section-cards{
+        display: flex;
+        align-items: center;
+        gap: 3rem;
+        margin: 2rem 0rem;
+        justify-content: center;
+        flex-wrap: wrap;
+    }
+
+    .feature-section-card{
+        height: 22rem;
+        width: 20rem;
+        padding: 2rem;
+        border-radius: 3rem;
+        /* box-shadow: 1px 2px 3px rgba(0, 0, 0, 0.205); */
+        border: 1px solid #cdefe9 ;
     
+    }
 }
