--- a/src/components/browseMore.module.css
+++ b/src/components/browseMore.module.css
@@ -3,7 +3,7 @@
     padding: 3rem 4rem;
     position: relative;
     top: 10.5rem;
-    box-shadow: 1px 2px 3px rgba(0, 0, 0, 0.205);
+    /* box-shadow: 1px 2px 3px rgba(0, 0, 0, 0.205); */
 }
 
 .browse-more-section {
