--- a/src/components/footer.module.css
+++ b/src/components/footer.module.css
@@ -1,7 +1,7 @@
 .footer-section {
   padding: 3rem 4rem;
-  position: relative;
-  top: 10.5rem;
+  /* position: relative;
+  top: 10.5rem; */
   background-color: #056050;
   color: white;
 }
