--- a/src/components/cartItems.module.css
+++ b/src/components/cartItems.module.css
@@ -1,7 +1,8 @@
 .cart-section {
   margin-top: 2rem;
-  padding: 3rem 5rem;
+  padding: 3rem 2rem;
   margin: 10rem auto 0 auto;
+  max-width: 55rem;
 }
 
 .back-anchor {
@@ -12,36 +13,31 @@
 }
 
 .cart-title {
-  text-align: center;
+  /* text-align: center; */
   color: black;
 }
 
 .cart-item-lists {
-  list-style: none;
   width: 100%;
-}
-
-.cart-item-list {
-  margin-top: 3rem;
-  display: flex;
-  gap: 1rem;
-  justify-content: space-between;
-  align-items: center;
-}
-
-th {
-  font-size: 2rem;
-  color: black;
-  text-align: left;
-}
-
-.empty-col {
-  width: 56px;
+  border-collapse: collapse;
 }
 
 .cart-item-info {
   display: flex;
-  flex-wrap: wrap;
+  align-items: center;
+  gap: 1rem;
+}
+
+th {
+  text-align: left;
+  padding: .5rem;
+}
+td{
+   padding-left: .5rem;
+}
+
+.cart-item-input {
+  width: 2rem;
 }
 
 .cart-item-img {
@@ -52,9 +48,14 @@ th {
   width: 100%;
 }
 
-.cart-item-article h4 {
+.cart-item-description h4 {
   color: black;
+  font-size: 1.4rem;
 }
+
+.cart-item-description p {
+    font-size: 1.3rem;
+  }
 
 .cart-item-article span {
   color: black;
@@ -66,12 +67,8 @@ th {
   height: 3rem;
 }
 
-.cart-item-price {
-  display: flex;
-}
-
-.cart-item-price button {
-  margin-left: 2rem;
+.remove-item-btn {
+  margin-left: 1rem;
   border-radius: 50%;
   padding: 0.5rem 0.7rem;
   border: none;
@@ -105,9 +102,6 @@ th {
   padding: 2rem;
   margin: 5rem auto;
   border-radius: 1rem;
-}
-
-.order-summary h2 {
 }
 
 .order-summary li {
@@ -155,3 +149,65 @@ th {
     margin: 15rem 0.1rem 5rem 0.1rem;
   }
 }
+
+/* .cart-section {
+  margin-top: 2rem;
+  padding: 3rem 2rem;
+  margin: 10rem auto 0 auto;
+}
+
+.back-anchor {
+  text-decoration: none;
+  color: #056050;
+  display: inline-block;
+  margin-bottom: 3rem;
+}
+
+.cart-title {
+  text-align: center;
+  color: black;
+}
+
+.cart-item-lists {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+.cart-item-list {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    gap: 3rem;
+    align-items: center ;
+    flex-basis: 33%;
+    text-align: left;
+}
+.item-info-div{
+    display: flex;
+    justify-content: space-between;
+     gap: 1rem; 
+}
+
+.item-price-div {
+    display: flex;
+}
+
+.quantity {
+    padding-left: 1rem;
+}
+
+.item-description{
+    width: 3rem;
+}
+
+.cart-item-description{
+    font-size: 1.2rem;
+}
+
+
+.cart-item-input{
+    width: 6rem;
+    height: 4rem;
+} */
