--- a/src/layout/PopUp.module.css
+++ b/src/layout/PopUp.module.css
@@ -10,21 +10,6 @@
     margin: auto;
     text-align: center;
     z-index: 400000000;
-    font-size: 2.1rem;
-    padding: 1rem 2rem;
-    /* animation: moveInTop 0.4s;
-    animation-fill-mode: forwards; */
+    font-size: 1.9rem;
+    padding: .6rem 1rem;
 }
-
-
-/* @keyframes moveInBottom {
-    0% {
-      opacity: 0;
-      transform: translateY(0rem);
-    }
-  
-    100% {
-        opacity: 1;
-      transform: translateY(10rem);
-    }
-  } */
